--- a/css/style.css
+++ b/css/style.css
@@ -1,140 +1,342 @@
-/* Reset default browser styles */
-* {
-   margin: 0;
-   padding: 0;
-   font-family:sans-serif;
-}
+/* Styles defined for the desktop or the bigger screen devices*/
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap'); 
 
-/* Styles for header section */
-.header {
-   width: 100%;
-   height: 100vh;
-   background-color: lightblue;
-}
+body { 
+	margin: 0; 
+	padding: 0; 
+	box-sizing: border-box; 
+	font-family: 'Poppins', sans-serif; 
+} 
 
-/* Styles for navigation bar */
-nav {
-   display: flex;
-   margin: auto;
-   width: 90%;
-   padding: 20px;
-   align-items: center;
-   justify-content: space-between;
-}
+/* Header Navbar Styles */
+.navbar { 
+	display: flex; 
+	align-items: center; 
+	justify-content: space-between; 
+	position: fixed; 
+	top: 0; 
+	width: 100%; 
+	background-image: linear-gradient(90deg, #74D7BB, #53C8B6, #35A99C); 
+	background-color: transparent; 
+} 
 
-nav ul li {
-   display: inline-block;
-   list-style: none;
-   margin: 10px;
-}
+.logo { 
+	padding: 0 5rem; 
+} 
 
-nav ul li a {
-   text-decoration: none;
-   color: black;
-   font-weight: bolder;
-}
+.logo .logo-heading { 
+	color: #fff; 
+} 
 
-nav ul li a:hover {
-   background-color: seagreen;
-   border-radius: 2px;
-   color: white;
-}
+.menu { 
+	padding: 0 5rem; 
+} 
 
-.button-cv, .button-gfc{
-   display: inline-block;
-   margin-left: 0%;
-   border-radius: 5px;
-   transition: background-color 0.5s;
-   background: black;
-   padding: 10px;
-   text-decoration: none;
-   font-weight: bold;
-   color: white;
-   border: none;
-   cursor: pointer;
-}
+.hamburger { 
+	display: none; 
+	color: #fff; 
+	font-size: 25px; 
+} 
 
-.button-cv:hover {
-   background-color: white;
-   color: black;
-}
+.cross-icon { 
+	display: none; 
+} 
 
-.button-gfc{
-   background: lightsalmon;
-}
+.menu .menu-list { 
+	display: flex; 
+	list-style: none; 
+} 
 
-.button-gfc:hover {
-   background-color: white;
-   color: black;
-}
+.menu-list .menu-list-items { 
+	padding: 0.5rem 1rem; 
+} 
 
-/* Styles for body section */
-.body {
-   margin-left: 100px;
-   margin-top: 100px;
-}
+@media screen and (min-width: 856px) and (max-width: 1024px) { 
+	.menu-list .menu-list-items { 
+		padding: 0.5rem 0.3rem; 
+	} 
+} 
 
-.body h1 {
-   font-size: 30px;
-   color: black;
-   margin-bottom: 20px;
-}
+/* Main Hero Section Styles */
+.hero { 
+	background-image: url('./Images/heroImg3.avif'); 
+	background-repeat: no-repeat; 
+	background-size: 100% 100%; 
+	width: 100%; 
+	height: 100vh; 
+	display: flex; 
+	align-items: center; 
+	justify-content: start; 
+	margin: 4.8rem 0; 
+} 
 
-.demo1 {
-   color: orange;
-   margin-bottom: 30px;
-}
-  
-.demo2 {
-   color: black;
-   line-height: 20px;
-}
+.hero .intro { 
+	text-align: center; 
+	margin: 0 5rem; 
+} 
 
-.button-lrn, .button-hire{
-   background: lightsalmon;
-   padding: 10px 12px;
-   text-decoration: none;
-   font-weight: bold;
-   color: whitesmoke;
-   display: inline-block;
-   margin: 30px 8px;
-   border-radius: 5px;
-   transition: background-color 0.3s;
-   border: none;
-   letter-spacing: 1px;
-   cursor: pointer;
-}
+.hero .intro-buttons { 
+	margin: 2rem 0; 
+	display: flex; 
+	align-items: center; 
+	justify-content: space-evenly; 
+} 
 
-.button-lrn:hover {
-   background-color: whitesmoke;
-   color: black;
-}
+/* About section styles */
+.about { 
+	display: flex; 
+	align-items: center; 
+	background-image: linear-gradient(45deg, #363D73, #2794B3); 
+	justify-content: space-between; 
+	width: 100%; 
+} 
 
-.button-hire {
-   background: black;
-}
+.about .about-text { 
+	width: 450px; 
+	color: #fff; 
+	padding: 5rem 1rem 5rem 5rem; 
+} 
 
-.button-hire:hover {
-   background-color: seagreen;
-}
+.about .about-image img { 
+	height: 400px; 
+	width: 450px; 
+	padding: 5rem 5rem 5rem 1rem; 
+} 
 
-span {
-   color: seagreen;
-}
+/* Portfolio section styles */
+.portfolio { 
+	margin: 4.8rem 0; 
+	padding: 0 5rem; 
+} 
 
-/* Styles for image section */
-.image {
-   width: 45%;
-   height: 100%;
-   position: absolute;
-   bottom: 0;
-   right: 100px;
-}
+.port-card { 
+	padding: 0 !important; 
+	background: none !important; 
+	border: 2px solid #000; 
+} 
 
-.image img {
-   height: 100%;
-   position:absolute;
-   left: 50%;
-   bottom: 10%;
-   transform: translate(-60%);
+.port-card .image { 
+	width: 100%; 
+} 
+
+.port-card .image img { 
+	height: 200px; 
+	width: 100%; 
+	border-top-right-radius: 20px; 
+	border-top-left-radius: 20px; 
+} 
+
+/* Services section styles */
+.services { 
+	display: flex; 
+	align-items: center; 
+	justify-content: center; 
+	flex-direction: column; 
+	margin: 4.8rem 0; 
+	padding: 0 5rem; 
+} 
+
+.my-row { 
+	display: flex; 
+	align-items: center; 
+	justify-content: space-between; 
+	margin: 2rem 0; 
+} 
+
+.my-row .my-col { 
+	text-align: center; 
+	width: 30%; 
+} 
+
+.my-card { 
+	text-align: center; 
+	display: flex; 
+	flex-direction: column; 
+	align-items: center; 
+	justify-content: center; 
+	border-radius: 20px; 
+	background-image: linear-gradient(#74D7BB, #53C8B6, #35A99C); 
+	padding: 1rem; 
+} 
+
+.icon { 
+	height: 100px; 
+	width: 100px; 
+	border-radius: 50%; 
+	background-color: #363D73; 
+	display: flex; 
+	align-items: center; 
+	justify-content: center; 
+} 
+
+.icon svg { 
+	font-size: 30px; 
+	color: #fff; 
+} 
+
+/* Contact section styles */
+.contact { 
+	padding: 0 5rem; 
+} 
+
+.contact-content { 
+	display: flex; 
+	margin: 3rem 0; 
+	justify-content: space-between; 
+} 
+
+.contact-form-container { 
+	width: 50%; 
+} 
+
+.contact-form { 
+	display: flex; 
+	flex-direction: column; 
+} 
+
+.contact-form .form-controls { 
+	width: 80%; 
+	padding: 10px 0; 
+	margin: 1.67rem 0; 
+} 
+
+.contact-form .form-btn { 
+	width: 83%; 
+} 
+
+.contact-details { 
+	width: 50%; 
+} 
+
+/* Footer Styles */
+.footer { 
+	background-color: #000; 
+	color: #fff; 
+	padding: 2rem; 
+} 
+
+.footer-list-items { 
+	display: flex; 
+	align-items: center; 
+	justify-content: center; 
+	height: 50px; 
+	width: 50px; 
+	margin: 1rem 1rem 0 1rem; 
+	border-radius: 50%; 
+	background-color: #53C8B6; 
+} 
+
+.footer-links { 
+	font-size: 24px; 
+	color: #fff; 
+	text-decoration: none; 
+} 
+
+.social-links { 
+	display: flex; 
+	align-items: center; 
+	justify-content: center; 
+} 
+
+.footer-menu { 
+	padding: 0 5rem; 
+} 
+
+.footer-menu .footer-menu-list { 
+	display: flex; 
+	list-style: none; 
+} 
+
+
+
+
+
+
+/* utility classes */
+.greet-heading { 
+	font-size: 1.3rem; 
+	font-weight: lighter; 
+	margin: 0; 
+	letter-spacing: 1px; 
+} 
+
+.my-heading { 
+	font-size: 2.5rem; 
+	margin: 0; 
+} 
+
+.sub-heading { 
+	margin: 0; 
+	font-size: 0.8rem; 
+	color: #ccc; 
+	font-weight: lighter; 
+} 
+
+.links:hover { 
+	border-bottom: 2px solid #fff; 
+} 
+
+.links { 
+	border-bottom: 2px solid transparent; 
+	transition: all 0.25s; 
+	padding: 5px; 
+	text-decoration: none; 
+	color: #fff; 
+} 
+
+.btn { 
+	padding: 10px 20px; 
+	border-radius: 5px; 
+	cursor: pointer; 
+	letter-spacing: 1px; 
+	border: none; 
+} 
+
+.common-btn { 
+	background-color: #35A99C; 
+	color: #fff; 
+	border: 2px solid #35A99C; 
+	transition: all 0.25s; 
+} 
+
+.common-btn:hover { 
+	background-color: #fff; 
+	color: #35A99C; 
+	border: 2px solid #35A99C; 
+	outline: none; 
+} 
+
+.ghost-btn { 
+	background-color: #fff; 
+	color: #35A99C; 
+	border: 2px solid #35A99C; 
+	outline: none; 
+} 
+
+.ghost-btn:hover { 
+	background-color: #35A99C; 
+	color: #fff; 
+	transition: all 0.25s; 
+	border: 2px solid #35A99C; 
+} 
+
+.heading-span { 
+	font-weight: bolder; 
+} 
+
+.text-center { 
+	text-align: center; 
+} 
+
+.small-para { 
+	font-size: 14px; 
+	color: #fff; 
+} 
+
+.white-text { 
+	color: #fff; 
+} 
+
+.blue-text { 
+	color: #363D73; 
 }
